Version 0.2.2

- Labels added for BASE, PREFIX, WHERE, Update, Prologue and Constraint occurrences

Version 0.2.1

- Internal: code cleanup
- External: example.py extended

Version 0.2

Package now called parsertools.

The structure is as follows:
- parsertools.base: basic toolset, language independent
- parsertools.extras: utility functions for helping with specifying grammars. In this release: separatedList.
- parsertools.parsers: package containing parsers implemented. In this release SPARQL only.

A usage example is given in example.py.